--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       href="path/to/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/0b2a11856d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>New Challenge</title>
   </head>
   <body>
